# typing-rust

./: .gitignore  Cargo.toml  README.md
data_provider/: Cargo.toml
data_provider/data/: quotes.txt
data_provider/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
screen/: Cargo.toml
screen/src/: feedback.rs  lib.rs  text.rs  theme.rs  typing_box.rs  wpm.rs
screen/src/component/: button.rs  mod.rs  next_button.rs  quit_button.rs  restart_button.rs  textbox.rs  tracker.rs  wpm.rs
src/: lib.rs  main.rs
src/app/: component.rs  focus.rs  mod.rs  state.rs  style.rs  text.rs  theme.rs  util.rs
src/app/bombparty/: component.rs  macros.rs  mod.rs  style.rs
src/app/endscreen/: graph.rs  mod.rs  next_button.rs  quit_button.rs  restart_button.rs  source.rs  wpm.rs
src/app/state/: mod.rs  screen.rs  textbox.rs  typing_box.rs  typing_test.rs
src/app/theme_select/: button.rs  cancel_button.rs  mod.rs
src/app/typing_test/: mod.rs  mode_select.rs  next_button.rs  restart_button.rs  textbox.rs  theme_button.rs  tracker.rs
src/data/: quotes.json  quotes.txt  script.sh  test.txt
src/data_provider/: mod.rs
src/screen/: endscreen.rs  focus.rs  mod.rs  state.rs  style.rs  text.rs  theme.rs  theme_select.rs  typing_test.rs  util.rs
src/screen/component/: mod.rs  next_button.rs  quit_button.rs  textbox.rs  (+4 more)
typer/: Cargo.toml
typer/src/: lib.rs  main.rs
types/: Cargo.toml
types/src/: lib.rs  style.rs  theme.rs
typing-rust/: Cargo.toml  README.md
typing-rust-macros/: Cargo.toml
typing-rust-macros/src/: lib.rs
typing-rust/src/: lib.rs  main.rs
(+46 files in other folders)
