[package]
name = "typing_test"
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Typing speed test in rust"
repository = "https://github.com/mingli202/typing-rust"
authors = ["mingli202"]

[dependencies]
macroquad = "0.4.13"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
dirs = "6.0.0"
